feat: create and get rooms
