# server/src/interfaces/rooms.interface.ts
@@ -1,0 +1,5 @@
+export interface Rooms {
+  id: number;
+  room_name: string;
+  room_number: number;
+}
